samples/_failures_safe/1761277087_f6e800_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1bc58afb.c: In function ‘main’:
./samples/SAFE/__tmp_1bc58afb.c:128:12: error: missing terminating " character
  128 |     printf("\nEnter values for matrix
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1bc58afb.c:128:5: error: expected expression at end of input
  128 |     printf("\nEnter values for matrix
      |     ^~~~~~
./samples/SAFE/__tmp_1bc58afb.c:128:5: error: expected declaration or statement at end of input
